# MAGE-Engine

./: .gitattributes  .gitignore  .gitmodules  BuildEngine.py  BuildShaders.py  CMakeLists.txt  Contributing.md  Core.lua  Doxyfile  GenerateCompileCommands.sh  Helper.py  Info.txt  License  License.txt  Makefile  PackageAssets.py  PremakeCore.lua  PremakeSharp.lua  Readme.md  Readme.txt  Roadmap.md  Run.bat  Run.sh  Setup.py  Utility.py  makefile  premake5.lua
Client/: ClientMain.c
Core/: mageAPI.h  mageApplication.c  mageCore.h  mageGeneric.c  mageInput.c  mageMain.c  mageMaths.c  mageRenderer.c  mageScene.c  mageWindow.c
Core/Resources/Shaders/: basic.frag
Distros/: PKGBUILD
Examples/: premake5.lua
Examples/Hello-World/Source/: Main.c
Helpers/: AssetPaths.json  CommandLineArguments.json
Mage/: CMakeLists.txt  Mage.h  Makefile  mageAPI.c  mageAPI.cs  mageAPI.h  mageApplication.c  mageCore.h  mageDebug.c  mageEvent.c  mageGeneric.c  mageInput.c  mageMain.c  mageMaths.c  mageRenderer.c  mageRendererGeneric.c  mageScene.c  mageWindow.c
Mage/Platform/Mono/: mageMono.c
Mage/Platform/Vulkan/: mageHandler.c  mageRenderer.c  mageRendererSetup.c  mageVulkanBuffers.c  mageVulkanGeneric.c  mageVulkanHandler.c  mageVulkanIndicies.c  mageVulkanRenderer.c  mageVulkanSetup.c  mageVulkanShaders.c
Mage/Resources/: Readme.md
Mage/Resources/Shaders/: fragment.frag  fragment.sprv  geometry.geom  geometry.sprv  vertex.vert
Mage/Source/: CreateStructures.h  EngineApplication.c  EngineApplication.h  FileSystem.c  FileSystem.h  GraphicsBuffer.h  Includes.h  InputHandler.c  InputHandler.h  Maths.h  Renderer.h  Threading.h  UnitTests.c  UnitTests.h  Window.h  mageAPI.h  mageApplication.c  mageCore.h  mageDebug.c  mageEvent.c  mageGeneric.c  mageInput.c  mageMain.c  mageRendererGeneric.c  mageTypes.c  mageWindow.c
Mage/Source/Assets/: AssetsLoader.h
Mage/Source/ECS/: mageComponent.c  mageEntity.c  mageLocals.c  magePredefined.c  mageScene.c  mageSystem.c
Mage/Source/Linux/: LinuxFileSystem.c  LinuxInputHandler.c  LinuxThreading.c  LinuxWindow.c  Window.c  mageThreads.c
Mage/Source/Linux/Wayland/: WaylandInputHandler.c  WaylandSurface.c  WaylandWindow.c
Mage/Source/Linux/XLib/: XLibInputHandler.c  XLibSurface.c  XLibWindow.c
Mage/Source/Maths/: MathsGeneric.c  mageFormular.c  mageMatrixs.c  mageVectors.c
Mage/Source/Mono/: mageCore.cs  mageMaths.cs
Mage/Source/OpenAL/: mageAudio.c
Mage/Source/Platform/Vulkan/: mageVulkanAPI.h  mageVulkanBuffers.c  mageVulkanGeneric.c  mageVulkanRenderable.c  mageVulkanRenderer.c  mageVulkanSetup.c  mageVulkanShaders.c
Mage/Source/Pulse-Audio/: magePulse.c
Mage/Source/Renderer/: mageBuffers.c  mageDescriptors.c  mageGeneric.c  mageRenderable.c  mageRenderer.c  mageSetup.c  mageShaders.c  mageTextures.c
Mage/Source/Vulkan/: VulkanBuffer.c  VulkanCommandBuffers.c  VulkanFrameBuffer.c  VulkanGraphicsPipeline.c  VulkanLoader.c  VulkanMemory.c  VulkanPhysicalDevice.c  VulkanRenderPass.c  VulkanRenderer.c  VulkanRenderer.h  VulkanShaders.c  VulkanShaders.h  VulkanSurface.c  VulkanSwapChain.c  VulkanSynchronisation.c  mageBuffers.c  mageDescriptors.c  mageGeneric.c  mageMemory.c  mageRenderable.c  mageSetup.c  mageShaders.c  mageTextures.c
Mage/Source/Wayland/: WaylandInputHandler.c  WaylandSurface.c  WaylandWindow.c
Mage/Source/Windows/: WindowsFileSystem.c  WindowsInputHandler.c  WindowsSurface.c  WindowsThreading.c  WindowsWindow.c  mageThreads.c
Mage/Source/XLib/: XLibInputHandler.c  XLibSurface.c  XLibWindow.c
Mage/Vulkan/: mageRenderer.c
Readme/: Readme.md  Roadmap.md
Resources/Shaders/: basic.vert
Sandbox/: CMakeLists.txt  Client.cs  Main.c  Makefile  ResourceLoader.c  ResourceLoader.h  Resources.lua  Sandbox.c  Sandbox.h
Sandbox/Source/: Core.h  Main.c  SandboxMain.c
SandboxSharp/: PremakeSharp.lua
SandboxSharp/Source/: Example.cs
Scripts/: BuildShaders.sh  GenerateAndCompile.sh  GenerateCompileCommands.sh  Run.bat  Setup.py  Utility.py  client.makefile  engine.makefile  helper.config  helper.json
Scripts/Linux/: Clean.sh  CompileShaders.sh  Linux-Makefile.sh  Makefile.sh  ValidateShaders.sh
Scripts/Windows/: VS2019.bat
SharedResources/Shaders/: BuildShaders.sh
SharedResources/Shaders/Colored/: Fragment.frag  Vertex.vert
SharedResources/Shaders/ColoredTexture/: Fragment.frag
Source/: mageAPI.h  mageBuffers.c  mageCore.h  mageGeneric.c  mageInput.c  mageMain.c  mageMaths.c  mageMemoryDebug.c  mageRenderer.c  mageWindow.c
Tests/: CMakeLists.txt  CommonResources.c  CommonResources.h  TestFileSystem.c  TestNativeWindow.c  TestRenderer.c  TestThreading.c  TestUnitTests.c  TestVulkanLayers.c
